@@ -3,4 +3,4 @@ RUN groupadd -r -g 999 ukulele && useradd -rd /opt/ukulele -g ukulele -u 999 -ms
 COPY --chown=ukulele:ukulele build/libs/ukulele.jar /opt/ukulele/ukulele.jar
 USER ukulele
 WORKDIR /opt/ukulele/
-ENTRYPOINT ["java", "-jar", "/opt/ukulele/ukulele.jar"]
+ENTRYPOINT ["java", "--enable-native-access=ALL-UNNAMED", "-jar", "/opt/ukulele/ukulele.jar"]
